<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_sort"
        android:title="@string/menu_sort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_refresh"
        android:title="@string/refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_export"
        android:title="@string/export"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_import"
        android:title="@string/firewall_import"
        android:icon="@android:drawable/ic_menu_upload"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_reboot_reminder"
        android:title="@string/reboot_reminder"
        android:checkable="true"
        app:showAsAction="never" />

</menu>
